--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "firebase": "^8.9.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vue3-discordpicker": "^1.1.0",
+    "vuemoji-picker": "^0.0.7",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
