--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vue-ts",
   "version": "0.1.0",
+  "homepage": "https://cursos-edteam.github.io/test/",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
